fix toast z-index to be in front of activity feed

--- a/client/src/components/Toast/Toast.scss
+++ b/client/src/components/Toast/Toast.scss
@@ -8,7 +8,7 @@
   max-width: 400px;
   margin-left: auto;
   margin-right: $spacer-xl;
-  z-index: 5;
+  z-index: 10;
 
   .alert {
     border: none;
